--- a/src/index.css
+++ b/src/index.css
@@ -3,24 +3,18 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-  /* font-family: Poppins,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
+@layer base {
+  body {
+    @apply bg-gray-low text-blue-custom overflow-x-hidden;
+  }
 }
 
-body{
-  font-family: Poppins, sans-serif;
-  line-height: 1.5;
-  color: #1B2A61;
-  background-color: #F1F1F9;
+@layer utilities {
+  .flex-center {
+    @apply flex items-center justify-center;
+  }
+
+  .list-menu{
+    @apply flex gap-3 text-gray-custom hover:text-blue-custom;
+  }
 }
