--- a/src/index.css
+++ b/src/index.css
@@ -2,11 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
-/* import 'bootstrap/dist/css/bootstrap.min.css'; */
+/* @import 'bootstrap/dist/css/bootstrap.min.css'; */
 
 @layer base {
   body {
     @apply bg-gray-low text-blue-custom overflow-x-hidden;
+    @apply font-sans;
   }
 }
 
